[project]
name = "comfyui_soze"
description = "Nodes: "Output Filename (Soze), Load Image (Soze), Load Images From Folder (Soze), Image Batch Process Switch (Soze), CSV Reader (Soze)"
version = "1.0.1"
license = "LICENSE"
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/SozeInc/ComfyUI_Soze"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "soze"
DisplayName = "ComfyUI_Soze"
Icon = ""
