[project]
name = "comfyui_soze"
description = "Soze Nodes: Quality of Life, Batch Processing and Useful Abandoned Repo Nodes"
version = "1.1.0"
license = { text = "MIT License" }
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/SozeInc/ComfyUI_Soze"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "soze"
DisplayName = "ComfyUI_Soze"
Icon = ""
